# e2cwt

./: .gitignore  CMakeLists.txt  README.md  main.cpp
code/: bankBuild.cpp  bankBuild.h  evaluate.cpp  evaluate.h  main.cpp  wordList.h
